--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.0",
